@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.9 2004/01/08 20:49:39 xtraeme Exp $
+$NetBSD: distinfo,v 1.10 2004/06/24 18:20:04 xtraeme Exp $
 
-SHA1 (icecast-2.0.0.tar.gz) = 76f41f807bdff5dfb50d5b67075fc401de7e270a
-Size (icecast-2.0.0.tar.gz) = 684624 bytes
+SHA1 (icecast-2.0.1.tar.gz) = e9ecbb55d2a5d950bcca00c46f58a9eec28b6ae4
+Size (icecast-2.0.1.tar.gz) = 750259 bytes
 SHA1 (patch-aa) = fa92a4a704a3f471a0669c9933b36a3586425dc5
 SHA1 (patch-ab) = 39cf0ed1e9da8c7d90fa192731307817e91496c9
